# srpg-engine

./: .gitignore  proyecto-de-graduacion.docx  ~$oyecto-de-graduacion.docx
SimpleTileMovementSystem/: CMakeLists.txt  simple-tile-movement-system.cpp  simple-tile-movement-system.hpp
action-system/: CMakeLists.txt  action-system.cpp  action-system.hpp
build-s2dge-tilepos-adapter-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  s2dge-tilepos-adapter.cbp
lua53/: CMakeLists.txt
menu-system/: CMakeLists.txt  cursor.cpp  cursor.hpp  highlight.cpp  highlight.hpp  menu-system.cpp  menu-system.hpp
resources/: clownpiece-64x64-2.xcf  clownpiece-64x64.xcf  srpg.db
resources/Exports/: resources - Shortcut.lnk
resources/sound/: aliases.txt
s2dge-tilepos-adapter/: CMakeLists.txt  s2dge-tilepos-adapter.cpp  s2dge-tilepos-adapter.hpp
sandbox/: CMakeLists.txt  main.cpp
simple-position-system/: CMakeLists.txt
simple-position-system/include/: action.hpp  cursor.hpp  highlight.hpp  option.hpp  selection-options.hpp  simple-position-system.hpp  tile-position-system.hpp
simple-position-system/src/: action.cpp  cursor.cpp  highlight.cpp  selection-options.cpp  simple-position-system.cpp  tile-position-system.cpp
simple-sound-system/: CMakeLists.txt  simple-sound-system.cpp  simple-sound-system.hpp  sound-effect-handler.cpp  sound-effect-handler.hpp
simple-tile-system/: CMakeLists.txt
simple-tile-system/include/: sts-gamesystem.hpp
srpg-engine/: CMakeLists.txt
srpg-engine-test/: CMakeLists.txt  chess.cpp  chess.hpp  event-handler.cpp  event-handler.hpp  main.cpp  srpg-demo.cpp  srpg-demo.hpp
srpg-engine/include/: collection.hpp  collection.hpp.Jk3692  common.hpp  configuration-manager.hpp  core-vocabulary.hpp  game-controller.hpp  game-controller.hpp.bak  gamecommon.hpp  gamecore.hpp  gamecore.hpp.bak  gameobject.hpp  gameobjectfactory.hpp  gameobjectloader.hpp  gamesettings.hpp  gamesystem.hpp  luautil.hpp  luautil.hpp.bak  observer.hpp  property.hpp  repository.hpp  scene.hpp  state-machine.hpp  state.hpp  systemgeneral.hpp  vocabulary.hpp
srpg-engine/lua/include/: lua.h
srpg-engine/lua/src/: lapi.c  lauxlib.c  lbaselib.c  lcorolib.c  liolib.c  lmathlib.c  lstrlib.c  ltablib.c  lutf8lib.c
srpg-engine/src/: configuration-manager.cpp  core-vocabulary.cpp  game-controller.cpp  game-controller.cpp.bak  gamecore.cpp  gameobject.cpp  luautil.cpp  main.cpp  scene.cpp  state-machine.cpp  state.cpp
srpg-s2dge-system/: CMakeLists.txt  main.cpp  objectexample.json  video.config
srpg-s2dge-system/include/: s2dge-common.hpp  s2dge-factory.hpp  s2dge-gamesystem.hpp  s2dge-injector.hpp  sprite.hpp  texture-handler.hpp  utilities.hpp
srpg-s2dge-system/src/: s2dge-factory.cpp  s2dge-gamesystem.cpp  s2dge-injector.cpp  sprite.cpp  texture-handler.cpp  utilities.cpp
srpg-sqlite-loader-system/: CMakeLists.txt  main.cpp
